--- a/src/main/resources/templates/compute.mustache
+++ b/src/main/resources/templates/compute.mustache
@@ -1,8 +1,13 @@
 
 <title>My application deployed automatically</title>
-  <h1>Hello, World!</h1>
-    Result is {{result}}
+  <h1>MyProgram</h1>
+   <p>In the first form, enter a list of integers separated by a newline character</p>
+   <p>In the second form, enter a index number for the list</p>
+   <p>In the third form, enter another index number for the list</p>
+   <p>Result will be displayed on the screen</p>
 
+   Result is {{result}}
+    
 
   <form action="compute" method="post">
         <textarea name="input1" rows="10" cols="30">
